# agentic-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  crypto.py  main.py  queue.py  tracing.py  worker.py
app/agent/: cache.py  checkpointer.py  graph.py  management.py  rewrite.py  router.py  runtime.py  schemas.py  tools.py  ws.py
app/agent/engines/: base.py  common.py  factory.py  pipeline.py  tool_calling.py
app/agent/llm/: anthropic.py  base.py  chat.py  factory.py  openai.py  slm.py
app/db/: __init__.py  migrate.py  pool.py  queries.py
app/destinations/: router.py  schemas.py  service.py
app/kb/: router.py  schemas.py  service.py
app/kb/embeddings/: base.py  local.py  openai.py  registry.py
app/kb/ingestion/: chunker.py  loaders.py  pipeline.py
app/kb/search/: bm25.py  rerank.py  retriever.py  rrf.py
app/kb/vectorstore/: milvus.py
app/llms/: router.py  schemas.py  service.py
migrations/: 0001_init.sql  0002_session_memory.sql  0003_llm_tools.sql
tests/: conftest.py  test_crypto.py  test_rrf.py
